<resources>
    <string name="app_name" translatable="false">Drurch</string>

    <string name="bars_text">BARS</string>
    <string name="churches_text">CHURCHES</string>
    <string name="current_password_text">Current password</string>
    <string name="email_number_text">Email or phone</string>
    <string name="modify_text">Modify</string>
    <string name="name_text">Name</string>
    <string name="navigation_drawer_open">Open sidebar</string>
    <string name="navigation_drawer_close">Close sidebar</string>
    <string name="password_text">Password</string>
    <string name="profile_text">Profile</string>
    <string name="sign_in_text">Sign in</string>
    <string name="register_text">Register</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="welcome_text">Welcome</string>
    <string name="modify_profile_text">Modify profile</string>
    <string name="about_app_text">About drurch</string>
    <string name="close_session_text">Close session</string>
    <string name="user_field_error">Name field is empty.</string>
    <string name="email_number_field_error">Email or phone field is empty.</string>
    <string name="password_field_error">Password field is empty.</string>
    <string name="repeat_password_field_error">You must repeat the password.</string>
    <string name="password_match_error">These passwords don\'t match.</string>
    <string name="create_user_success">User created correctly.</string>
    <string name="create_user_error">Has occurred an error creating the user.</string>
    <string name="password_length_error">Password must have at least 8 characters.</string>
    <string name="user_password_error">Invalid username/password combination.</string>
    <string name="current_password_field_error">You must verify your current password before changing it.</string>
    <string name="modify_user_error">Has occurred an error updating the user.</string>
    <string name="select_photo_source_text">Select the origin of the photo.</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="upload_photo_error">Has occurred an error uploading the photo.</string>
    <string name="gps_dialog_error">Your Location Settings is \'Off\'. Please enable it to use this app.</string>
    <string name="cancel_text">Cancel</string>
    <string name="enable_text">Enable</string>
</resources>
