<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drurch.actPrincipal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="32dp"
        android:id="@+id/llPerfil">

        <TextView
            android:id="@+id/btnPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_text"
            android:textColor="@android:color/white"
            android:textSize="22dp" />

        <ImageView
            android:id="@+id/ivPerfil"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginLeft="16dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/persona_perfil" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/burbuja_superior"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/llPerfil" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:id="@+id/llBienvenido"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toBottomOf="@+id/llPerfil">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/llBienvenido">

        <ImageView
            android:id="@+id/btnBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/circulo_cerveza" />

        <TextView
            android:id="@+id/tvBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/bars_text"
            android:textColor="@android:color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/llBienvenido">

        <ImageView
            android:id="@+id/btnIglesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/circulo_biblia" />

        <TextView
            android:id="@+id/tvIglesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/churches_text"
            android:textColor="@android:color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/burbuja_baja"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp" />

</android.support.constraint.ConstraintLayout>
